k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: drmp
  labels:
    name: drmp
    environment: production
